--- a/app/src/main/res/layout/vocabulary_fragment.xml
+++ b/app/src/main/res/layout/vocabulary_fragment.xml
@@ -35,6 +35,14 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Spinner
+        android:id="@+id/select_word_sorting_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"/>
+
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
